[package]
name = "cyc_filt"
version = "1.1.1"
edition = "2021"
authors = ["Chentao Yang yangchentao at genomics.cn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
crossbeam = "0.8"
clap = {version = "4", features = ["derive"]}
