[package]
name = "cyc_filt"
version = "2.0.0"
edition = "2021"
authors = ["Chentao Yang yangchentao at genomics.cn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
crossbeam = "0.8"
clap = {version = "4", features = ["derive"]}
rayon = "1.5.3"
num_cpus = "1.13.1"
